fix scroll visible

--- a/frontend/src/styles/karaokemugen.scss
+++ b/frontend/src/styles/karaokemugen.scss
@@ -527,7 +527,7 @@ button[name="infoKara"]:before {
 	right: 10px;
 }
 .detailsKara .topRightButtons {
-	height: calc(100% - 20px);
+	height: calc(100% - 40px);
     display: flex;
     flex-direction: column;
     flex-wrap: wrap-reverse;
